Correctly align all elements of the Add/Edit Posts metadata table

--- a/css/pmpro_sequences.css
+++ b/css/pmpro_sequences.css
@@ -14,6 +14,7 @@
 #save_pmpro-seq-useroptin {
     display: none;
 }
+
 .pmpro-sequence-sortorder label,
 .pmpro-sequence-delaytype label,
 .pmpro-sequence-template label,
@@ -21,6 +22,11 @@
 .pmpro-sequence-excerpt label {
     vertical-align: baseline;
 }
+
+table#newmeta td {
+    vertical-align: middle !important;
+}
+
 span#pmpro-seq-sort-status,
 span#pmpro-seq-delay-status,
 span#pmpro-seq-template-status,
